--- a/labo7/opdracht 2/styles/style.css
+++ b/labo7/opdracht 2/styles/style.css
@@ -1,3 +1,27 @@
+body {
+    margin: 0;
+    padding: 0;
+    background-color: lightgray;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h1 {
+    background: linear-gradient(to bottom, #991821 5%, #80141C 100%);
+    color: white;
+    margin-top: 0;
+    font-variant: small-caps;
+}
+
+section p {
+    font-weight: bold;
+}
+section ul {
+    display: inline-block;
+}
+section img {
+    width: 10%;
+}
+
 .datagrid {
     font: normal 12px/150% Arial, Helvetica, sans-serif;
     background: #fff;
