--- a/labo12/BeginSituatieOef2/styles/style.css
+++ b/labo12/BeginSituatieOef2/styles/style.css
@@ -76,6 +76,7 @@ footer {
 @media (max-width: 700px) {
     main {
         flex-direction: column;
+        width: 100%;
         align-items: center;
     }
 }
